# faigz-rs

./: .gitmodules  BGZF_IMPLEMENTATION_STATUS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TEST_RESULTS.md  build.rs  debug_bgzf  debug_bgzf.c  debug_test.py  faigz_minimal.c  faigz_minimal.h  test.fa  test.fa.fai  test_debug.rs  test_random_access.py  test_random_access_simple.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs  performance_demo.rs
src/: lib.rs  wrapper.c
tests/: integration_tests.rs  random_access_tests.rs  thread_safety_tests.rs
