[package]
name = "faigz-rs"
version = "0.1.0"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
description = "A Rust wrapper for the faigz reentrant FASTA/FASTQ index library"
license = "MIT"
repository = "https://github.com/waveygang/faigz-rs"

[dependencies]
libc = "0.2"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[dev-dependencies]
tempfile = "3.8"
