[package]
name = "faigz-rs"
version = "0.1.0"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
description = "A Rust wrapper for the faigz reentrant FASTA/FASTQ index library"
license = "MIT"
repository = "https://github.com/waveygang/faigz-rs"
homepage = "https://github.com/waveygang/faigz-rs"
documentation = "https://docs.rs/faigz-rs"
readme = "README.md"
keywords = ["bioinformatics", "fasta", "fastq", "index", "genomics"]
categories = ["science", "api-bindings"]
rust-version = "1.70.0"

[dependencies]
libc = "0.2"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[dev-dependencies]
tempfile = "3.8"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"

[[bin]]
name = "faigz"
path = "src/bin/faigz-demo.rs"

[[bin]]
name = "test_debug"
path = "test_debug.rs"

